[0.1.3+SVN]
* Updated documentation. <wrzasq>
* Bans lists. <wrzasq>
* Separated make targets for POT package and it's documentation. <wrzasq>
* More stricted parameters and results types. <wrzasq>
* Added display driver interface for non-database resources. <wrzasq>
* Added existence checking methods. <wrzasq>
* Added __get() and __set() methods to OTS_Admin. <wrzasq>
* PDO connection is now set to throw exceptions on SQL errors instead of silence them. <wrzasq>
* Code optimalisation. <wrzasq>
* Bugfixes. <wrzasq>

[0.1.2]
* OTAdmin protocol support. <wrzasq>
* Supports bank balance. <wrzasq>
* getStorage()/setStorage() methods in OTS_Player class. <wrzasq>
* More secured. <wrzasq>
* Fixed buffered streams to use little-endian storage (like Open Tibia does). <wrzasq>
* Implemented NetworkMessage. <wrzasq>

[0.1.1]
* Loading groups by names. <wrzasq>
* Constructors with optional identifier argument for automatical object loading. <wrzasq>
* OTS_Toolbox class. <wrzasq>
* Access calculations in OTS_Account class. <wrzasq>
* E_OTS_General class. <wrzasq>

[0.1.0]
* Houses support. <wrzasq>
* No need to call POT::createObject(). <wrzasq>
* Separated data/ directory resources loaders. <wrzasq>
* Default data/ directory resources instances within POT class. <wrzasq>
* Each data/ directory resource reader class implements an Iterator/IteratorAggregate, Countable and ArrayAccess interfaces. <wrzasq>
* Uses IteratorAggregate interface instead of Iterator in some places (returns ArrayIterator as iterator). <wrzasq>
* __get()/__set() implementation. <wrzasq>
* __toString() as display drivers. <wrzasq>
* Additional wrappers for resource binds. <wrzasq>
* Some additional updates to match OTServ development. <wrzasq>
* Fixed some typos. <wrzasq>
* Code cleanup. <wrzasq>

[0.0.8]
* Added items.xml and items.otb files support. <wrzasq>
* Added Iterator and Countable interfaces implementation in OTS_OTBMFile class. <wrzasq>
* Fixed quoting guild rank name while updating. <wrzasq>