@@ -26,10 +26,13 @@ tutorials/ - phpDocumentor directory.
 CHANGELOG - changes history.
 INSTALL - installation tutorial.
 LICENSE - POT license (GNU LGPL v3), if you don't accept it - don't use any of those scripts.
+LICENSE.PEAR.CRYPT_RSA - PEAR::Crypt_RSA (PHP License, version 3.0), if you don't accept it - don't use any of those scripts.
+LICENSE.PEAR.CRYPT_XTEA - PEAR::Crypt_XTEA (PHP License, version 2.02), if you don't accept it - don't use any of those scripts.
 NEWS - changes in current release.
 README - this readme file.
 RULES - rules to be followed during developing contributed code.
 Makefile - make input, for documentation generation.
+POT.psf - PHK Package Specification File.
 documentation.pdf - phpDocumentor-generater documentation in PDF format.
 compat.php - Compatibility assurance library.
 test.php - phpUnit test suite.
@@ -43,10 +46,11 @@ Makefile contains some targets for make that can help in development. Makefile r
 php: PHP CLI interface.
 phpdoc: phpDocumentor.
 phpunit: PHPUnit testing framework.
+PHK_Creator.phk: this is file which you download from http://phk.tekwire.net/.
 
 Possible targets:
 
-all: default one, runs all other targets (in order: clean, check, documentation, pdf, online, test, package).
+all: default one, runs all other targets (in order: clean, check, documentation, pdf, online, test, package, manual, phk).
 clean: deletes documentation.
 check: checks syntax of all PHP files.
 documentation: generates HTML documentation.
@@ -54,6 +58,8 @@ pdf: generates PDF documentation.
 online: OTServ-AAC website documentation template used.
 test: runs test suite.
 package: creates pot.tar.gz file for distribution purposes.
+manual: creates documentation.tar.gz file for distribution purposes.
+phk: creates POT.phk distribution package.
 
 For more readable output of phpUnit test run:
 php test.php
